WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208439
JSC 32bits broken in debug mode by
r257399
https://bugs.webkit.org/show_bug.cgi?id=208439
Summary
JSC 32bits broken in debug mode by r257399
Paulo Matos
Reported
2020-03-02 03:12:02 PST
Commit 257399 (
bug 207522
) breaks 32bit builds in debug mode due to assert calling JSC::JSValueRegs::gpr() ../../Source/JavaScriptCore/bytecode/AccessCase.cpp:1945:41: error: no matching function for call to ‘JSC::JSValueRegs::gpr()’ ASSERT(baseGPR != valueRegs.gpr());
Attachments
Patch
(1.75 KB, patch)
2020-03-02 04:49 PST
,
Paulo Matos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Paulo Matos
Comment 1
2020-03-02 04:49:38 PST
Created
attachment 392131
[details]
Patch
Caio Lima
Comment 2
2020-03-02 07:15:38 PST
Comment on
attachment 392131
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392131&action=review
LGTM
> Source/JavaScriptCore/bytecode/AccessCase.cpp:1947 > + ASSERT(!valueRegs.uses(scratchGPR));
Nice catch.
Paulo Matos
Comment 3
2020-03-04 02:51:46 PST
ping!
WebKit Commit Bot
Comment 4
2020-03-04 10:21:54 PST
Comment on
attachment 392131
[details]
Patch Clearing flags on attachment: 392131 Committed
r257856
: <
https://trac.webkit.org/changeset/257856
>
WebKit Commit Bot
Comment 5
2020-03-04 10:21:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2020-03-04 10:22:16 PST
<
rdar://problem/60045082
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug