JSC 32bits broken in debug mode by r257399 https://bugs.webkit.org/show_bug.cgi?id=208439

Patch by Paulo Matos <pmatos@igalia.com> on 2020-03-04
Reviewed by Carlos Alberto Lopez Perez.

Use uses() method call instead of gpr() on assert to that it
works for both 64 and 32 bits.

* bytecode/AccessCase.cpp:
(JSC::AccessCase::generateImpl):

Canonical link: https://commits.webkit.org/221495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257856 268f45cc-cd09-0410-ab3c-d52691b4dbfc